tests/src/frontend/typechecking/invalid/unknown_pattern3.sk
base class Foo
class Bar<T>(T) extends Foo {
  fun doit(x: Foo): T {
    x match {
    | Bar(y) -> y
    }
  }
}
